--- a/src/full.liquid
+++ b/src/full.liquid
@@ -2,45 +2,50 @@
 
 <div class="layout layout--col h--full pb--10">
 
-          <!-- Electricity Section -->
+  {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
+  {% if resource_type == 'Gas' %}
+    {% assign primary_data = gas %}
+    {% assign primary_label = "Gas" %}
+    {% assign secondary_data = electricity %}
+    {% assign secondary_label = "Elec" %}
+  {% else %}
+    {% assign primary_data = electricity %}
+    {% assign primary_label = "Electricity" %}
+    {% assign secondary_data = gas %}
+    {% assign secondary_label = "Gas" %}
+  {% endif %}
+
+
+  <!-- Primary Resource Section -->
   <div class="grid">
     <div class="row">
-      {% render 'price_card'
-        , data: electricity
-        , label_now: "Price electricity now"
-        , label_avg: "Avg electricity price"
-        , resource_name: "Electricity"
-        , bar_color: "bg--black"
-        , show_indicator: true
+      {% render 'stat_grid'
+        , data: primary_data
+        , currency: "€"
       %}
     </div>
   </div>
 
-  <div class="border--h-5 w--full"></div>
-
-  <!-- Gas Section -->
+    <!-- Secondary Resource Section -->
   <div class="grid">
     <div class="row">
-      {% render 'price_card'
-        , data: gas
-        , label_now: "Price gas now"
-        , label_avg: "Avg gas price"
-        , resource_name: "Gas"
-        , bar_color: "bg--gray-5"
-        , show_indicator: true
+      {% render 'secondary_stat_grid'
+        , data: secondary_data
+        , currency: "€"
+        , label_prefix: secondary_label
       %}
     </div>
   </div>
 
-          <!-- Chart Container -->
-          {% render 'energy_chart'
-            , id: "energy-chart"
-            , electricity: electricity
-            , gas: gas
-            , variant: "full"
-            , chart_height: "null" 
-          %}
+  <!-- Chart Container -->
+  {% render 'energy_chart'
+    , id: "energy-chart"
+    , electricity: electricity
+    , gas: gas
+    , variant: "full"
+    , chart_height: "null" 
+  %}
 
-        </div>
-  <div class="divider"></div>
-    {% render 'title_bar', instance: "Energy Prices" %}
+</div>
+<div class="divider"></div>
+{% render 'title_bar', instance: primary_label %}
