--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -1,56 +1,47 @@
 {% render 'head_assets' %}
 
 <div class="layout layout--col gap--space-between">
+  
+  {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
+  {% if resource_type == 'Gas' %}
+    {% assign primary_data = gas %}
+    {% assign primary_label = "Gas" %}
+    {% assign secondary_data = electricity %}
+    {% assign secondary_label = "Elec" %}
+  {% else %}
+    {% assign primary_data = electricity %}
+    {% assign primary_label = "Electricity" %}
+    {% assign secondary_data = gas %}
+    {% assign secondary_label = "Gas" %}
+  {% endif %}
+
   <div class="grid h-full">
 
-    <!-- Left Column: Stats & Legends -->
+    <!-- Left Column: Stats -->
     <div class="col--span-3 col gap--space-between">
 
-      <!-- Row 1: Electricity (Standard Size) -->
-      <div class="grid grid--cols-2 gap--[9px]" data-adjust-grid-gaps="false">
-        {% render 'mini_stat', 
-          data: electricity, 
-          label: "Price electricity now", 
-          type: 'current'
-        %}
-        {% render 'mini_stat', 
-          data: electricity, 
-          label: "Avg electricity price", 
-          type: 'avg'
-        %}
+      <!-- Primary Resource Stats -->
+      <div class="grid">
+        <div class="row">
+          {% render 'stat_grid'
+            , data: primary_data
+            , currency: "€"
+          %}
+        </div>
       </div>
 
-      <div class="divider"></div>
 
-      <!-- Row 2: Gas (Small Size) -->
-      <div class="grid grid--cols-2">
-        {% render 'mini_stat', 
-          data: gas, 
-          label: "Price gas now", 
-          type: 'current',
-          size: 'xsmall'
-        %}
-        {% render 'mini_stat', 
-          data: gas, 
-          label: "Avg gas price", 
-          type: 'avg',
-          size: 'xsmall'
-        %}
+            <!-- Secondary Resource Stats -->
+      <div class="grid">
+        <div class="row">
+          {% render 'secondary_stat_grid'
+            , data: secondary_data
+            , currency: "€"
+            , label_prefix: secondary_label
+          %}
+        </div>
       </div>
 
-      <div class="divider"></div>
-
-      <!-- Row 3: Legends -->
-      <div class="grid grid--cols-2">
-        {% render 'legend_item', 
-          label: "Electricity", 
-          color: "bg--black" 
-        %}
-        {% render 'legend_item', 
-          label: "Gas", 
-          color: "bg--gray-5" 
-        %}
-      </div>
     </div>
 
     <!-- Right Column: Chart -->
@@ -66,4 +57,4 @@
     </div>
   </div>
 </div>
-{% render 'title_bar', instance: "Energy Prices Chart" %}
+{% render 'title_bar', instance: primary_label %}
