--- a/src/half_vertical.liquid
+++ b/src/half_vertical.liquid
@@ -2,51 +2,41 @@
 
 <div class="layout layout--col h--full pb--10">
 
-  <!-- Electricity Section -->
-  <div class="grid grid--cols-2 gap--[9px]" data-adjust-grid-gaps="false">
-    {% render 'mini_stat'
-      , data: electricity
-      , label: "Elec Now"
-      , type: "current"
-    %}
-    {% render 'mini_stat'
-      , data: electricity
-      , label: "Elec Avg"
-      , type: "avg"
-    %}
+  {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
+  {% if resource_type == 'Gas' %}
+    {% assign primary_data = gas %}
+    {% assign primary_label = "Gas" %}
+    {% assign secondary_data = electricity %}
+    {% assign secondary_label = "Elec" %}
+  {% else %}
+    {% assign primary_data = electricity %}
+    {% assign primary_label = "Electricity" %}
+    {% assign secondary_data = gas %}
+    {% assign secondary_label = "Gas" %}
+  {% endif %}
+
+  <!-- Primary Stats Section -->
+  <div class="grid">
+    <div class="row">
+      {% render 'stat_grid'
+        , data: primary_data
+        , currency: "€"
+      %}
+    </div>
+  </div>
+
+    <!-- Secondary Stats Section -->
+  <div class="grid">
+    <div class="row">
+      {% render 'secondary_stat_grid'
+        , data: secondary_data
+        , currency: "€"
+        , label_prefix: secondary_label
+      %}
+    </div>
   </div>
 
   <div class="divider"></div>
-
-  <!-- Gas Section -->
-  <div class="grid grid--cols-2">
-    {% render 'mini_stat'
-      , data: gas
-      , label: "Gas Now"
-      , type: "current"
-      , size: "small"
-    %}
-    {% render 'mini_stat'
-      , data: gas
-      , label: "Gas Avg"
-      , type: "avg"
-      , size: "small"
-    %}
-  </div>
-
-  <div class="divider"></div>
-
-  <!-- Legends -->
-  <div class="grid grid grid--cols-2">
-    {% render 'legend_item'
-      , label: "Electricity"
-      , color: "bg--black"
-    %}
-    {% render 'legend_item'
-      , label: "Gas"
-      , color: "bg--gray-5"
-    %}
-  </div>
 
   <!-- Chart Container -->
   {% render 'energy_chart'
@@ -57,4 +47,4 @@
   %}
 </div>
 
-{% render 'title_bar', instance: "Energy Prices" %}
+{% render 'title_bar', instance: primary_label %}
