Add toggle for Elec | Gas

--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -53,6 +53,7 @@
         , electricity: electricity
         , gas: gas
         , variant: "full"
+        , resource_type: resource_type
       %}
     </div>
   </div>
