Applying changes as per Chef (TRMNL) suggestions

--- a/src/full.liquid
+++ b/src/full.liquid
@@ -39,7 +39,7 @@
 
   <!-- Chart Container -->
   {% render 'energy_chart'
-    , id: "energy-chart"
+    , id: "energy-chart" | append_random
     , electricity: electricity
     , gas: gas
     , variant: "full"
