--- a/TRMNL/src/full.liquid
+++ b/TRMNL/src/full.liquid
@@ -1,6 +1,6 @@
 {% render 'head_assets' %}
 
-<div class="layout layout--col h--full pb--10">
+  <div class="layout layout--col h--full pb--10">
 
   {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
   {% if resource_type == 'Gas' %}
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-    <!-- Secondary Resource Section -->
+  <!-- Secondary Resource Section -->
   <div class="grid">
     <div class="row">
       {% render 'secondary_stat_grid'
@@ -37,16 +37,13 @@
     </div>
   </div>
 
+  <div class="divider">
+</div>
+
   <!-- Chart Container -->
-  {% render 'energy_chart'
-    , id: "energy-chart" | append_random
-    , electricity: electricity
-    , gas: gas
-    , variant: "full"
-    , chart_height: "null" 
-    , resource_type: resource_type
+  {% render 'energy_chart', id: "energy-chart" | append_random, electricity: electricity, gas: gas, variant: "full", chart_height: "null", resource_type: resource_type
   %}
 
 </div>
-<div class="divider"></div>
-{% render 'title_bar', instance: primary_label %}
+{% render 'title_bar'
+  , instance: primary_label %}
