--- a/TRMNL/src/half_horizontal.liquid
+++ b/TRMNL/src/half_horizontal.liquid
@@ -1,7 +1,7 @@
 {% render 'head_assets' %}
 
 <div class="layout layout--col gap--space-between">
-  
+
   {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
   {% if resource_type == 'Gas' %}
     {% assign primary_data = gas %}
@@ -31,7 +31,7 @@
       </div>
 
 
-            <!-- Secondary Resource Stats -->
+      <!-- Secondary Resource Stats -->
       <div class="grid">
         <div class="row">
           {% render 'secondary_stat_grid'
@@ -48,14 +48,10 @@
     <div class="col--span-3 col gap--space-between">
 
       <!-- Render the shared chart component -->
-      {% render 'energy_chart'
-        , id: "energy-chart" | append_random
-        , electricity: electricity
-        , gas: gas
-        , variant: "full"
-        , resource_type: resource_type
+      {% render 'energy_chart', id: "energy-chart" | append_random, electricity: electricity, gas: gas, variant: "full", resource_type: resource_type
       %}
     </div>
   </div>
 </div>
-{% render 'title_bar', instance: primary_label %}
+{% render 'title_bar'
+  , instance: primary_label %}
