--- a/TRMNL/src/quadrant.liquid
+++ b/TRMNL/src/quadrant.liquid
@@ -1,6 +1,6 @@
 {% render 'head_assets' %}
 
-  <div class="layout layout--col h--full pb--10">
+  <div class="layout layout--col gap--space-between">
 
   {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
   {% if resource_type == 'Gas' %}
