--- a/TRMNL/src/shared.liquid
+++ b/TRMNL/src/shared.liquid
@@ -73,7 +73,7 @@
               <span class="value value--tnums value--small">{{ highest.total_price | round: 2 }}</span>
               <span class="label label--gray">{{ currency }}</span>
             </div>
-            <span class="label label--small">High {{ highest.from | date: "%H:%M" }}</span>
+            <span class="label label--small">High @ {{ highest.from | date: "%H:%M" }}</span>
           </div>
         </div>
         <div class="item">
@@ -82,7 +82,7 @@
               <span class="value value--tnums value--small">{{ lowest.total_price | round: 2 }}</span>
               <span class="label label--gray">{{ currency }}</span>
             </div>
-            <span class="label label--small">Low {{ lowest.from | date: "%H:%M" }}</span>
+            <span class="label label--small">Low @ {{ lowest.from | date: "%H:%M" }}</span>
           </div>
         </div>
         <div class="item">
@@ -91,7 +91,7 @@
               <span class="value value--tnums value--small">{{ current_item.total_price | round: 2 }}</span>
               <span class="label label--gray">{{ currency }}</span>
             </div>
-            <span class="label label--small">Now {{ current_time_str }}</span>
+            <span class="label label--small">Now @ {{ current_time_str }}</span>
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
               <span class="value value--tnums value--small">{{ highest.total_price | round: 2 }}</span>
               <span class="label label--gray">{{ currency }}</span>
             </div>
-            <span class="label">Highest at {{ highest.from | date: "%H:%M" }}</span>
+            <span class="label">Highest @ {{ highest.from | date: "%H:%M" }}</span>
           </div>
         </div>
         <div class="item item--emphasis-2">
@@ -114,7 +114,7 @@
               <span class="value value--tnums value--small">{{ lowest.total_price | round: 2 }}</span>
               <span class="label label--gray">{{ currency }}</span>
             </div>
-            <span class="label">Lowest at {{ lowest.from | date: "%H:%M" }}</span>
+            <span class="label">Lowest @ {{ lowest.from | date: "%H:%M" }}</span>
           </div>
         </div>
         <div class="item item--emphasis-1">
@@ -124,7 +124,7 @@
               <span class="value value--tnums value--small">{{ current_item.total_price | round: 2 }}</span>
               <span class="label label--gray">{{ currency }}</span>
             </div>
-            <span class="label">Now at {{ current_time_str }}</span>
+            <span class="label">Now @ {{ current_time_str }}</span>
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
 
 {% comment %}
   =============================================================================
-  COMPONENT: Secondary Stat Grid (Now/Avg/Lowest)
+  COMPONENT: Secondary Stat Grid (Highest/Lowest/Now)
   Usage: {% render 'secondary_stat_grid', data: gas, currency: "€", label_prefix: "Gas" %}
   =============================================================================
 {% endcomment %}
@@ -150,12 +150,13 @@
 {% template secondary_stat_grid %}
   {% if data.size > 0 %}
     {% assign highest = data | sort: "total_price" | last %}
+    {% assign lowest = data | sort: "total_price" | first %}
 
     {% assign current_timestamp = "now" | date: "%s" | plus: trmnl.user.utc_offset %}
     {% assign current_hour = current_timestamp | date: "%H" %}
+    {% assign current_time_str = current_timestamp | date: "%H:%M" %}
 
     {% assign current_item = data[0] %}
-    {% assign avg_val = data | map: 'total_price' | sum | divided_by: data.size %}
 
     {% for item in data %}
       {% assign item_time = item.from | date: "%s" %}
@@ -172,30 +173,30 @@
         <div class="meta"></div>
         <div class="content">
           <div>
-            <span class="value value--tnums value--small">{{ current_item.total_price | round: 2 }}</span>
-            <span class="label label--gray">{{ currency }}</span>
-          </div>
-          <span class="label">{{ label_prefix }} Now</span>
-        </div>
-      </div>
-      <div class="item">
-        <div class="meta"></div>
-        <div class="content">
-          <div>
-            <span class="value value--tnums value--small">{{ avg_val | round: 2 }}</span>
-            <span class="label label--gray">{{ currency }}</span>
-          </div>
-          <span class="label">{{ label_prefix }} Avg</span>
-        </div>
-      </div>
-      <div class="item">
-        <div class="meta"></div>
-        <div class="content">
-          <div>
             <span class="value value--tnums value--small">{{ highest.total_price | round: 2 }}</span>
             <span class="label label--gray">{{ currency }}</span>
           </div>
-          <span class="label">{{ label_prefix }} High</span>
+          <span class="label">{{ label_prefix }} | Highest @ {{ highest.from | date: "%H:%M" }}</span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="meta"></div>
+        <div class="content">
+          <div>
+            <span class="value value--tnums value--small">{{ lowest.total_price | round: 2 }}</span>
+            <span class="label label--gray">{{ currency }}</span>
+          </div>
+          <span class="label">{{ label_prefix }} | Lowest @ {{ lowest.from | date: "%H:%M" }}</span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="meta"></div>
+        <div class="content">
+          <div>
+            <span class="value value--tnums value--small">{{ current_item.total_price | round: 2 }}</span>
+            <span class="label label--gray">{{ currency }}</span>
+          </div>
+          <span class="label">{{ label_prefix }} | Now @ {{ current_time_str }}</span>
         </div>
       </div>
     </div>
@@ -227,7 +228,6 @@
         {% unless forloop.last %},{% endunless %}
       {% endfor %}
     ];
-    
     var rawGas = [
       {% for item in gas %}
         { "from": "{{ item.from }}", "till": "{{ item.till }}", "total_price": {{ item.total_price | default: 0 }} }
@@ -255,8 +255,6 @@
         chart: {
           type: "spline",
           height: null, // keep null to let it fill container
-
-
           width: null,
           animation: false,
           backgroundColor: 'transparent',
