--- a/TRMNL/src/half_horizontal.liquid
+++ b/TRMNL/src/half_horizontal.liquid
@@ -4,14 +4,14 @@
 
   {% assign resource_type = trmnl.plugin_settings.custom_fields_values.resource_type | default: 'Electricity' %}
   {% if resource_type == 'Gas' %}
-    {% assign primary_data = gas %}
+    {% assign primary_data = data.marketPrices.gasPrices %}
     {% assign primary_label = "Gas" %}
-    {% assign secondary_data = electricity %}
+    {% assign secondary_data = data.marketPrices.electricityPrices %}
     {% assign secondary_label = "Elec" %}
   {% else %}
-    {% assign primary_data = electricity %}
+    {% assign primary_data = data.marketPrices.electricityPrices %}
     {% assign primary_label = "Electricity" %}
-    {% assign secondary_data = gas %}
+    {% assign secondary_data = data.marketPrices.gasPrices %}
     {% assign secondary_label = "Gas" %}
   {% endif %}
 
@@ -26,6 +26,7 @@
           {% render 'stat_grid'
             , data: primary_data
             , currency: "€"
+            , label_prefix: primary_label
           %}
         </div>
       </div>
@@ -46,12 +47,11 @@
 
     <!-- Right Column: Chart -->
     <div class="col--span-3 col gap--space-between">
-
       <!-- Render the shared chart component -->
-      {% render 'energy_chart', id: "energy-chart" | append_random, electricity: electricity, gas: gas, variant: "full", resource_type: resource_type
-      %}
+      {% render 'energy_chart', id: "energy-chart" | append_random, electricity: primary_data, gas: secondary_data, variant: "full", resource_type: resource_type %}
     </div>
   </div>
+
 </div>
 {% render 'title_bar'
   , instance: primary_label %}
