--- a/TRMNL/src/half_vertical.liquid
+++ b/TRMNL/src/half_vertical.liquid
@@ -41,7 +41,7 @@
 </div>
 
   <!-- Chart Container -->
-  {% render 'energy_chart', id: "energy-chart" | append_random, electricity: primary_data, gas: secondary_data, variant: "full", resource_type: resource_type %}
+  {% render 'energy_chart', id: "energy-chart" | append_random, electricity: primary_data, gas: secondary_data, resource_type: resource_type %}
 
 </div>
 {% render 'title_bar'
