Fix chart not expanding vertically

--- a/TRMNL/src/shared.liquid
+++ b/TRMNL/src/shared.liquid
@@ -194,7 +194,7 @@
 {% endcomment %}
 
 {% template energy_chart %}
-  <div id="{{ id }}" class="w--full flex--grow"></div>
+  <div id="{{ id }}" class="w--full grow"></div>
 
   <script type="text/javascript">
     var rawElectricity = [
