--- a/TRMNL/src/shared.liquid
+++ b/TRMNL/src/shared.liquid
@@ -6,9 +6,9 @@
 {% endcomment %}
 
 {% template chart_assets %}
-  <script src="https://usetrmnl.com/js/highcharts/12.3.0/highcharts.js"></script>
-  <script src="https://usetrmnl.com/js/highcharts/12.3.0/highcharts-more.js"></script>
-  <script src="https://usetrmnl.com/js/highcharts/12.3.0/pattern-fill.js"></script>
+  <script src="https://trmnl.com/js/highcharts/12.3.0/highcharts.js"></script>
+  <script src="https://trmnl.com/js/highcharts/12.3.0/highcharts-more.js"></script>
+  <script src="https://trmnl.com/js/highcharts/12.3.0/pattern-fill.js"></script>
 {% endtemplate %}
 
 {% comment %}
@@ -31,7 +31,7 @@
 
 {% template title_bar %}
   <div class="title_bar">
-    <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
+    <img class="image" src="https://trmnl.com/images/plugins/weather/wi-lightning.svg">
     <span class="title">Frank Energie</span>
     <span class="instance">{{ instance | default: "Energy Prices" }}</span>
   </div>
